parse error fixed. Adjusted z-index codemirror hint problem

--- a/public/shared/css_editor.css
+++ b/public/shared/css_editor.css
@@ -71,3 +71,7 @@ code pre cite {
 .modal-header, .modal-footer {
     border-color: #666;
 }
+
+.CodeMirror-hints, .CodeMirror-lint-tooltip {
+z-index: 100000000000 !important;
+}
